Fix view on mobile and adjust margins/padding of sections

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -12,11 +12,33 @@
     font-size: 1.6rem;
 }
 
-.full-project {
+.project-links {
     display: flex;
-    margin: 6rem 0;
+    gap: 2rem;
+}
+
+%project-base {
+    display: flex;
+    // margin: 2rem 0;
     align-items: center;
     flex-direction: column;
+}
+
+%project-text {
+    flex-basis: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 4rem;
+    height: 100%;
+    justify-content: center;
+    background-color: var(--darker-gray);
+    border-radius: 8px 8px 0 0;
+    border-top: 12px solid var(--lighter-gray);
+}
+
+.full-project {
+    @extend %project-base;
 
     @media screen and (min-width: 1000px) {
         display: grid;
@@ -24,19 +46,10 @@
     }
 
     .full-project-text{
-        flex-basis: 60%;
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-        padding: 4rem;
-        height: 100%;
-        justify-content: center;
-        background-color: var(--darker-gray);
-        border-radius: 8px 8px 0 0;
-        border-top: 12px solid var(--off-white);
+        @extend %project-text;
 
         @media screen and (min-width: 1000px) {
-            border-left: 12px solid var(--off-white);
+            border-left: 12px solid var(--lighter-gray);
             border-top: none;
             padding: 0 4rem;
         }
@@ -62,9 +75,18 @@
             }
         }
     }
+}
 
-    .project-links {
-        display: flex;
-        gap: 2rem;
+.mini-project {
+    @extend %project-base;
+    margin: 2rem 0;
+    height: 275px;
+
+    .mini-project-text{
+        @extend %project-text;
+        padding: 4rem;
+        .project-links a {
+            padding: 1rem 2rem;
+        }
     }
 }
